--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>旧漢字新漢字相互変換機</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" href="https://raw.githubusercontent.com/Ruhamoto/old-kanji-to-new-kanji-converter/refs/heads/main/icon.png">
+    <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/Ruhamoto/old-kanji-to-new-kanji-converter/refs/heads/main/icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Yuji+Syuku&display=swap" rel="stylesheet">
